welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var motif=Array[Color](getMondeHauteur())
                                        ^Array1:22: error: not found: value motif
    setCouleurBrosse(motif(long-1))
                     ^